# EventGlucoseBench

./: .gitignore  1-config.yaml  CLAUDE.md  README.md  env.sh.template  pyproject.toml
code/eventglucose/: __init__.py  base.py  config.py  evaluation.py  memorization_mitigation.py  window_selection.py
code/eventglucose/baselines/: chronos.py  direct_prompt.py  llm_processes.py  timegen.py  timellm.py  unitime.py  utils.py  wrapper.py
code/eventglucose/baselines/hf_utils/: dp_hf_api.py
code/eventglucose/prompts/: __init__.py  make_prompt.py
code/eventglucose/state/: __init__.py  agent_config.py  llm_config.py  unified_state.py
code/eventglucose/tasks/: eventglucose_tasks.py  factory_task_Base.py  glucose_cgm_task.py  task_diet_ontime_noctx.py  task_diet_ontime_profile.py  task_diet_ontime_profile_basiceventinfo.py  task_diet_ontime_profile_detailedevent.py  task_diet_ontime_profile_detailedeventinfo.py  task_diet_ontime_profile_mediumevent.py  task_diet_ontime_profile_newdetail.py  task_diet_ontime_profile_newmedium.py  task_diet_ontime_profile_standardeventinfo.py  task_exercise_ontime_noctx.py  task_exercise_ontime_profile.py  task_exercise_ontime_profile_basiceventinfo.py  task_exercise_ontime_profile_detailedevent.py  task_exercise_ontime_profile_detailedeventinfo.py  task_exercise_ontime_profile_mediumevent.py  task_exercise_ontime_profile_newdetail.py  task_exercise_ontime_profile_newmedium.py  task_exercise_ontime_profile_standardeventinfo.py  task_noevent_ontime_noctx.py
code/eventglucose/tools/: __init__.py  _auth.py  _sdk_interface.py  _sdk_streaming.py  tools_ccsdk.py  tools_codexsdk.py  tools_llm_provider.py  tools_ohsdk.py  tools_runcode.py  tools_workspace.py
code/eventglucose/utils/: causal.py  plot.py
code/instanceclass/: eventglu.py
code/llm_processes/: hf_api.py
code/scripts/: __init__.py  run_individual.py.backup  run_result_check.py
evaluation/evalfn/: __init__.py  ablation_glucose_rcrps.py  aggregate_by_task.py  clinical_metrics.py  compute_glucose_rcrps.py  context_ablation.py  create_correlation_table.py  create_results_table.py  demographic_analysis.py  generate_all_figures.py  generate_clinical_figures.py  generate_context_ablation_figure.py  generate_demographic_figures.py  measurements.py  update_with_glucose_rcrps.py  util_crps.py  visualize_metric_comparison.py
evaluation/scripts/: 0-convert-Result-to-model-task-instance-score.py  1-describe-model-result-data-quality.py  2-generate-Table1-and-Table2.py  2-generate-Table3-diet-exercise.py  3-R1-llm-vs-baselines-by-context-FigureR1.py  3-R2-llm-with-without-context-FigureR2.py  3-R3-Parameter-Performance-FigureR3.py  3-R4-instance-group-analysis-FigureR4.py  4-appendixC-results.py  4-appendixE-predictionexample.py  4-appendixG-additionalFigures.py  5-demo-figure.py  5-democompare.py  6-data-source-statistics.py  run_all_evaluations.sh  shared_config.py
experiments/direct-prompt-models/: cc-claude4.5-opus-ctx_c1.json  cc-claude4.5-opus-noctx_c1.json  cc-claude4.5-sonnet-ctx_c1.json  cc-claude4.5-sonnet-noctx_c1.json  cc-gpt5-mini-ctx_c1.json  cc-gpt5-mini-noctx_c1.json  openrouter_gemini_2.5_flash_ctx_c1.json  openrouter_gemini_2.5_flash_noctx_c1.json  openrouter_qwen3_235b_ctx_c1.json  openrouter_qwen3_235b_noctx_c1.json
experiments/llmp-models/: qwen2.5-0.5b-instruct-ctx_g1.json  qwen2.5-0.5b-instruct-noctx_g1.json  qwen2.5-7b-instruct-ctx_g1.json  qwen2.5-7b-instruct-noctx_g1.json
